--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/iconos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/ico/favicon-32x32.png">
 
     <!-- font-awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -35,52 +35,52 @@
         data-mutate-approach="sync"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
-    <title>Task Manager</title>
+    <title>Task Manager | Contacto</title>
 </head>
 
 <body>
     <header>
-        <section>
-            <div>
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="./index.html">
-                            <img src="./img/descarga.png" width="90" height="55" alt="Logo">
-                            <span class="titlePage">Task Manager - TP</span> </a>
-                        <!-- <div class="titlePage" id="menu">Hola <span id="nombre"></span></div> -->
-                        <div class=" navbar-toggler-right">
-                            <div class="navbar-nav me-2">
-                                <span><a class="nav-link" href="./index.html">Inicio</a></span>
-                                <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
-                                <span id="sesionEstado"></span>
-                            </div>
+        <div>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./img/descarga.png" width="90" height="55" alt="descarga">
+                        <span class="titlePage">Task Manager - TP</span> </a>
+                    <!-- <div class="titlePage" id="menu">Hola <span id="nombre"></span></div> -->
+                    <div class=" navbar-toggler-right">
+                        <div class="navbar-nav me-2">
+                            <span><a class="nav-link" href="./index.html">Inicio</a></span>
+                            <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
+                            <span id="sesionEstado"></span>
                         </div>
                     </div>
-                </nav>
-            </div>
-        </section>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="container-2">
             <div>
                 <h2>Formulario de Contacto</h2>
-                <form>
+                <form id="contactForm">
                     <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombreContacto" required>
+                    <input type="text" id="nombre" name="nombre" required>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" required>
+                    <input type="email" id="email" name="email" required>
                     <label for="select">Motivo del contacto:</label>
                     <select name="select" id="select" required>
-                        <option value="--">Seleccione</option>
+                        <option value=""> - </option>
                         <option value="consulta">Consulta</option>
                         <option value="reclamo">Reclamo</option>
                         <option value="sugerencia">Sugerencia</option>
                     </select>
+                    <label for="imagen">Selecciona un archivo:</label>
+                    <input type="file" id="imagen" name="imagen" required>
                     <label for="mensaje">Mensaje:</label>
                     <textarea id="mensaje" name="mensaje" rows="4" placeholder="Escriba su mensaje" required></textarea>
                     <label>
                         <input type="checkbox" class="checkbox" name="check-terms" id="check-terms" required>
-                        He leído y estoy de acuerdo con los <a href="#" id="openTerms">Términos y condiciones</a> de
+                        He leído y estoy de acuerdo con los <a href="#" id="openTerms1">Términos y condiciones</a> de
                         esta web
                     </label>
                     <input type="submit" value="Enviar" onclick="sendMail();">
@@ -93,7 +93,7 @@
 
             <div class="info-CAC">
 
-                <img class="logo-cac-contacto" src="img/logo CAC.png" alt="">
+                <img class="logo-cac-contacto" src="img/logoCAC.png" alt="logo codo a codo">
 
 
 
@@ -115,13 +115,10 @@
             </div>
         </div>
 
-
-        </div>
         <div class="iframeCAC">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/K5LrSpuZbaE" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/K5LrSpuZbaE"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        </div>
         </div>
 
     </main>
@@ -132,6 +129,8 @@
     </footer>
     <!-- Datos de Sesion -->
     <script src="./js/sesiones.js"></script>
+    <!-- Terminos y condiciones -->
+    <script src="./js/terms.js"></script>
     <script>
 
         $(window).on('load', function () {
@@ -167,19 +166,23 @@
 
 
         function sendMail() {
-            let name = document.getElementById("nombreContacto").value
-            let email = document.getElementById("email").value
-            let message = document.getElementById("mensaje").value
-            let checkTerms = document.getElementById("check-terms").value
-            if (!name || !email || !message || !checkTerms) {
-                alert('Debe completar los datos')
-                return;
+            let name = document.getElementById("nombre").value;
+            let email = document.getElementById("email").value;
+            let select = document.getElementById("select").value;
+            let image = document.getElementById("imagen").value;
+            let message = document.getElementById("mensaje").value;
+            let checkTerms = document.getElementById("check-terms").checked;
+
+            if (!name || !email || !select === "" || !image || !message || !checkTerms) {
+                alert('Debe completar todos los datos y aceptar los términos y condiciones.');
+                return false;  // Evitar que el formulario se envíe
             }
-            alert(`Gracias por su contacto ${name}, a la brevedad recibira noticias nuestras!`);
-        };
+
+            alert(`Gracias por su contacto ${name}, a la brevedad recibirá noticias nuestras!`);
+            return true;  // Permitir que el formulario se envíe
+        }
     </script>
-    <!-- Terminos y condiciones -->
-    <script src="./js/terms.js"></script>
+
 </body>
 
 </html>
