--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/iconos/favicon-32x32.png">
-    
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/ico/favicon-32x32.png">
+
     <!-- font-awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -35,63 +35,46 @@
 
 <body onload="mostrarNombre()">
     <header>
-        <section>
-            <div>
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="./index.html">
-                            <img src="./img/descarga.png" width="90" height="55" alt="Logo">
-                            <span class="titlePage">Task Manager - TP</span> </a>
-                        <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
-                        <div class=" navbar-toggler-right">
-                            <div class="navbar-nav me-2">
-                                <span><a class="nav-link" href="./index.html">Inicio</a></span>
-                                <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
-                                <span id="sesionEstado"></span>
-                            </div>
+        <div>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./img/descarga.png" width="90" height="55" alt="descarga">
+                        <span class="titlePage">Task Manager - TP</span> </a>
+                    <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
+                    <div class=" navbar-toggler-right">
+                        <div class="navbar-nav me-2">
+                            <!-- <span><a class="nav-link" href="./index.html">Inicio</a></span> -->
+                            <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
+                            <span id="sesionEstado"></span>
                         </div>
                     </div>
-                </nav>
-            </div>
-        </section>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
-        <section>
+        <div class="boton-top">
+            <button type="button" id="btnAddTask" class="boton" onclick="Addtask();"><i
+                    class="icon-square-plus-outline"></i>Crear Tareas</button>
 
-            <div class="boton-top">
-
-                <button type="button" id="btnAddTask" class="boton" onclick="Addtask();"><i
-                        class="icon-square-plus-outline"></i>Crear Tareas</button>
-
-                <!--<button type="button" id="btnLoadBra" class="btn btn-secondary -md "
+            <!--<button type="button" id="btnLoadBra" class="btn btn-secondary -md "
                     onclick=" viewTaskSinAsignar('SinAsignar');"><i class="icon-visible"></i> &nbsp;
                     Tareas Sin Asignar</button>-->
-
-            </div>
-        </section>
+        </div>
 
         <!-- tarjetas de usuario -->
-        <section>
-            <!--<div class="contenedorTarjetaUsuario" id="tarjetasUsuarios">-->
             <div class="row col-12 justify-content-center align-self-center" id="tarjetasUsuarios">
             </div>
-        </section>
         <!-- tarjetas de tareas de usuario -->
-        <section>
-            <!--<div class="contenedorTarjetaUsuario" id="tareasUsuarios">-->
             <div class="row col-12 justify-content-center align-self-center" id="tareasUsuarios">
             </div>
-        </section>
         <!-- tarjetas de tareas de usuario Cerradas -->
-        <section>
             <div class="row col-12 justify-content-center align-self-center" id="tareasUsuariosCerradas">
             </div>
-        </section>
         <!-- tarjetas de tareas sin asignar -->
-        <section>
             <div class="row col-12 justify-content-center align-self-center" id="tareasSinAsignar">
             </div>
-        </section>
         <!-- MODAL -->
         <div class="modal fade" id="modalTotal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
             aria-hidden="true" style="display: none;">
@@ -140,8 +123,7 @@
                                 <div class="card-footer text-center">
                                     <div class="btn-group" role="group" aria-label="Basic example">
                                         <div class="d-grid gap-1 d-md-flex justify-content-md-end ">
-                                            <button class="boton" type="button"
-                                                onclick="addNewTask();">Crear</button>
+                                            <button class="boton" type="button" onclick="addNewTask();">Crear</button>
                                             <button class="boton" type="reset">Cancelar</button>
                                         </div>
                                     </div>
@@ -150,8 +132,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary btn-sm"
-                            onclick="closeModal();">Cerrar</button>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="closeModal();">Cerrar</button>
                     </div>
                 </div>
             </div>
@@ -173,6 +154,9 @@
 
     <!-- Funciones de Index-->
     <script src="./js/indexTask.js"></script>
+    
+    <!-- Terminos y condiciones -->
+    <script src="./js/terms.js"></script>
 
     <script>
         $(window).on('load', function () {
@@ -183,8 +167,6 @@
         });
     </script>
 
-    <!-- Terminos y condiciones -->
-    <script src="./js/terms.js"></script>
 </body>
 
 </html>
