--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/iconos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/ico/favicon-32x32.png">
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -28,54 +28,43 @@
 <body>
 
     <header>
-        <section>
-            <div>
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="./index.html">
-                            <img src="./img/descarga.png" width="90" height="55" alt="Logo">
-                            <span class="titlePage">Task Manager - TP</span> </a>
-                        <div class="titlePage" id="menu">Ingrese sus datos</div>
-                        <div class=" navbar-toggler-right">
-                            <div class="navbar-nav me-2">
-                                <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
-                                <span id="sesionEstado"></span>
-                            </div>
+        <div>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./img/descarga.png" width="90" height="55" alt="descarga">
+                        <span class="titlePage">Task Manager - TP</span> </a>
+                    <!-- <div class="titlePage" id="menu">Ingrese sus datos</div> -->
+                    <div class=" navbar-toggler-right">
+                        <div class="navbar-nav me-2">
+                            <span><a class="nav-link" href="./index.html">Inicio</a></span>
+                            <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
+                            <span id="sesionEstado"></span>
                         </div>
                     </div>
-                </nav>
-            </div>
-        </section>
+                </div>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <section>
-            <br>
-            <div class="d-flex justify-content-center">
-                <div class=" text-center">
+        <div class="d-flex justify-content-center">
+            <div class=" text-center">
 
-                    <label class="form-label" for="nombrelogin">Nombre</label>
-                    <input type="text" id="nombrelogin" class="form-control" />
+                <label class="form-label" for="nombrelogin">Nombre</label>
+                <input type="text" id="nombrelogin" class="form-control" />
 
-                    <label class="form-label" for="password">Clave</label>
-                    <input type="password" id="password" class="form-control" />
-                    <br>
-                    <button type="button" class="btn btn-primary btn-block mb-4 col-12"
-                        onclick="validar();">Entrar</button>
-
-                    <div class="col d-flex justify-content-center">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-                            <label class="form-check-label" for="form2Example31"> Recordar </label>
-                        </div>
-                    </div>
-                    <div class="flex-login-center">
-                        <a href="#!">Olvidaste la contraseña?</a>
-                        <a href="./register.html">Registrate</a>
-                    </div>
+                <label class="form-label" for="password">Clave</label>
+                <input type="password" id="password" class="form-control" />
+                <br>
+                <button type="button" class="btn btn-primary btn-block mb-4 col-12" onclick="validar();">Entrar</button>
+                <div class="flex-login-center">
+                    <span>
+                        <p> Si no eres usuario toca <a href="./register.html">Aqui</a></p>
+                    </span>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
     <footer class="footer">
         <a href="./estudiantes.html">Estudiantes</a>
@@ -87,6 +76,8 @@
     <script src="./js/sesiones.js"></script>
     <!-- Datos -->
     <script src="./js/usuarios.js"></script>
+    <!-- Terminos y condiciones -->
+    <script src="./js/terms.js"></script>
     <script>
         window.onload = function () {
             actualizarEstadoSesion();
@@ -107,8 +98,7 @@
             guardarNombre(nombre)
         }
     </script>
-    <!-- Terminos y condiciones -->
-    <script src="./js/terms.js"></script>
+
 </body>
 
 </html>
