--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/iconos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/ico/favicon-32x32.png">
 
     <!-- font-awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -18,7 +18,6 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/contacto.css">
-    <link rel="stylesheet" href="./css/registro.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -27,61 +26,72 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         data-mutate-approach="sync"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <title>Task Manager</title>
+    <title>Task Manager | Registro</title>
 </head>
 
 <body>
     <header>
-        <section>
-            <div>
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="./index.html">
-                            <img src="./img/descarga.png" width="90" height="55" alt="Logo">
-                            <span class="titlePage">Task Manager - TP</span> </a>
-                        <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
-                        <div class=" navbar-toggler-right">
-                            <div class="navbar-nav me-2">
-                                <span><a class="nav-link" href="./index.html">Inicio</a></span>
-                                <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
-                                <span id="sesionEstado"></span>
-                            </div>
+        <div>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./img/descarga.png" width="90" height="55" alt="descarga">
+                        <span class="titlePage">Task Manager - TP</span> </a>
+                    <!-- <div class="titlePage" id="menu">Hola <span id="nombre"></span></div> -->
+                    <div class=" navbar-toggler-right">
+                        <div class="navbar-nav me-2">
+                            <span><a class="nav-link" href="./index.html">Inicio</a></span>
+                            <span><a class="nav-link" href="./ayuda.html">Ayuda</a></span>
+                            <span id="sesionEstado"></span>
                         </div>
                     </div>
-                </nav>
-            </div>
-        </section>
+                </div>
+            </nav>
+        </div>
     </header>
     <section>
-        <div class="container23">
-            <h1 id="form-title">FORMULARIO DE REGISTRO</h1>
-            <br>
-            <form id="registerForm" onsubmit="return validateForm()">
-                <input type="text" name="nombre" placeholder="Nombre*" required><br>
-                <input type="text" name="apellido" placeholder="Apellido*" required><br>
-                <input type="email" name="correo" placeholder="Correo Electrónico*" required
-                    style="width: 100%; padding: 12px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; font-size: 16px; transition: border-color 0.3s ease;">
-                <input type="text" name="usuario" placeholder="Usuario*" required><br>
-                <input type="password" name="contraseña" placeholder="Contraseña*" required><br>
-                <select name="area" id="area" required>
-                    <option value="">Seleccionar área*</option>
-                    <option value="administracion">Administración</option>
-                    <option value="ventas">Ventas</option>
-                    <option value="produccion">Producción</option>
-                    <option value="contabilidad">Contabilidad</option>
-                </select><br>
-                <div id="messageContainer">
-                    <p id="message"></p>
-                </div>
-                <p class="position-label">Posición:</p>
-                <input type="radio" name="posicion" value="jefe_area" id="jefe_area" required onchange="showMessage()">
-                <label for="jefe_area" class="checkbox-label">Jefe de área</label>
-                <input type="radio" name="posicion" value="empleado" id="empleado" required onchange="showMessage()">
-                <label for="empleado" class="checkbox-label">Empleado</label><br><br>
-                <input type="image"
-                    src="imagenes/depositphotos_138758512-stock-photo-register-red-button-3d-rendering.png"
-                    alt="Registrarse" style="width: 200px; height: 80px;" onclick="validateForm()">
-            </form>
+        <div class="container-2">
+            <div>
+                <h2>FORMULARIO DE REGISTRO</h2>
+
+                <form id="registerForm" class="registerForm" onsubmit="return validateForm()">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                    <label for="apellido">Apellido:</label>
+                    <input type="text" id="apellido" name="apellido" required>
+                    <label for="correo">Email:</label>
+                    <input type="email" id="correo" name="correo" required>
+                    <label for="usuario">Usuario:</label>
+                    <input type="text" id="usuario" name="usuario" required>
+                    <label for="contraseña">Contraseña:</label>
+                    <input type="password" id="contraseña" name="contraseña" required>
+                    <label for="area">Departamento</label>
+                    <select name="area" id="area" required>
+                        <option value="">Seleccionar</option>
+                        <option value="administracion">Administración</option>
+                        <option value="ventas">Ventas</option>
+                        <option value="produccion">Producción</option>
+                        <option value="contabilidad">Contabilidad</option>
+                    </select>
+                    <div id="messageContainer">
+                        <p id="message"></p>
+                    </div>
+                    <p class="position-label">Posición:</p>
+                    <div class="radio-center">
+                        <div class="radio-container">
+                            <input type="radio" name="posicion" value="jefe_area" id="jefe_area" required
+                                onchange="showMessage()">
+                            <label for="jefe_area" class="checkbox">Jefe de área</label>
+                        </div>
+                        <div class="radio-container">
+                            <input type="radio" name="posicion" value="empleado" id="empleado" required
+                                onchange="showMessage()">
+                            <label for="empleado" class="checkbox">Empleado</label>
+                        </div>
+                    </div>
+                    <input type="submit" value="Registrar" onclick="validateForm();">
+                </form>
+            </div>
         </div>
     </section>
 
@@ -95,27 +105,21 @@
     <script src="./js/sesiones.js"></script>
     <!-- Datos -->
     <script src="./js/usuarios.js"></script>
+    <!-- Terminos y condiciones -->
+    <script src="./js/terms.js"></script>
+
     <script>
         window.onload = function () {
             actualizarEstadoSesion();
         };
 
-        function registrar(event) {
+        function registrar() { //event
             event.preventDefault();
-            let nombreContacto = document.getElementById("nombreContacto").value;
-            let apellido = document.getElementById("apellido").value;
-
-            if (!nombreContacto || !apellido) {
-                alert('Debe completar los datos')
-                return;
-            } else {
-                let usuarioNuevo = nombreContacto + apellido.charAt(0).toUpperCase();
-                registerUser(usuarioNuevo, allUsers);
-                guardarNombre(usuarioNuevo)
-            };
+            let usuario = document.getElementById("usuario").value;
+            registerUser(usuario, allUsers);
+            guardarNombre(usuario)
         };
-    </script>
-    <script>
+
         function validateForm() {
             var form = document.getElementById("registerForm");
             var inputs = form.querySelectorAll("input, select");
@@ -142,9 +146,10 @@
             if (isValid) {
                 var confirmation = confirm("Su registro se completó con éxito. Gracias por utilizar Task Manager.");
                 if (confirmation) {
-                    window.location.href = "login.html";
+                    registrar();
+                    window.location.href = "./index.html";
                 } else {
-                    window.location.href = "contacto.html";
+                    window.location.href = "./contacto.html";
                 }
             } else {
                 alert("Por favor, complete todos los campos obligatorios correctamente.");
@@ -163,8 +168,6 @@
             }
         }
     </script>
-    <!-- Terminos y condiciones -->
-    <script src="./js/terms.js"></script>
 
 </body>
 
